<resources>
    <string name="app_name">Plastr</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="favorite">Favorite</string>
    <string name="set">Set</string>
    <string name="search_hint">Search</string>
    <string name="bitmap_error_content">We could not load this image, you will be taken back.</string>
    <string name="bitmap_error_title">Plastr Error</string>
    <string name="empty_favorite1">You have no favorites yet.</string>
    <string name="empty_favorite2">Click some hearts.</string>
    <string name="empty_explore1">We could not find any posts.</string>
    <string name="empty_explore2">Try a different sub.</string>
    <string name="favorite_add">Added to Favorites</string>
    <string name="favorite_remove">Removed from Favorites</string>
    <string name="offline">Device is Offline</string>
    <string name="try_again">Try Again</string>
    <string name="error">An Error has Occurred</string>
    <string name="select_sub">Select Subreddits"</string>
    <string name="add_sub">Add Subreddits"</string>
    <string name="add_sub_description">Enter subreddit of your choice</string>
    <string name="save_success">Saved Successfully!</string>
    <string name="wallpaper_set">Wallpaper Set!</string>
    <string name="confirm_add">Are you sure you want to add this subreddit:</string>
    <string name="download">Download Image</string>
    <string name="set_description">Set Image as Wallpaper</string>
    <string name="storage_permission">Storage permission is needed to save wallpaper to your device</string>
    <string name="allow">Allow</string>
    <string name="size">%1$d X %2$d</string>
    <string name="domain">Domain</string>
    <string name="dimension">Dimension</string>
    <string name="size_label">Size</string>
    <string name="created">Created</string>
    <string name="label">%1$s: %2$s</string>
    <string name="set_wallpaper">Set wallpaper</string>
    <string name="set_home">Home screen</string>
    <string name="set_lock">Lock screen</string>
    <string name="set_home_lock">Home screen and lock screen</string>
    <string name="reddit_error">There was an error trying to request data from the server.</string>
    <string name="best">Best</string>
    <string name="hot">Hot</string>
    <string name="sort_new">New</string>
    <string name="rising">Rising</string>
    <string name="top">Top</string>
    <string name="controversial">Controversial</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="all">All</string>
    <string name="minimum">Please select at-least one subreddit</string>
    <string name="delete_last">You can not delete your last subreddit. Add another subreddit first and then you can delete this one.</string>
    <string name="delete_last_selected">You can not delete your last selected subreddit. Un-select it first and then you can delete it.</string>
    <string name="no_images">No more images were loaded</string>
    <string name="general">General</string>
    <string name="autoImage">Automatic wallpaper settings</string>
    <string name="notification_title">Wallpaper updated</string>
    <string name="another">Get another</string>
    <string name="view">View image</string>
    <string name="pro_title">Pro Upgrade</string>
    <string name="pro_message">This app will always be free to use, but developing takes time and effort, Pro upgrades help keep the app updated with new features and improvements.\n\n In return, you\'ll get an ad-free experience, and even more features in the future.</string>
</resources>
