<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingPrefix">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="20dp"
            android:maxLines="1"
            android:text="@string/set_wallpaper"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    <LinearLayout
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            tools:ignore="UseCompoundDrawables">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/set_home"
                app:ico_color="@color/white"
                app:ico_icon="gmd-home"
                app:ico_size="24dp" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/set_home"
                android:textColor="@color/white"
                android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/lock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            tools:ignore="UseCompoundDrawables">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/set_lock"
                app:ico_color="@color/white"
                app:ico_icon="gmd-lock"
                app:ico_size="24dp" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/set_lock"
                android:textColor="@color/white"
                android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/home_lock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            tools:ignore="UseCompoundDrawables">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/set_home_lock"
                app:ico_color="@color/white"
                app:ico_icon="gmd-phone-android"
                app:ico_size="24dp" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/set_home_lock"
                android:textColor="@color/white"
                android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>
